ecmascript/parser/tests/typescript-errors/variable-declarator/definite-assignment-not-allowed/input.ts.stderr
error: Destructuring bindings require initializers
 --> $DIR/tests/typescript-errors/variable-declarator/definite-assignment-not-allowed/input.ts:1:5
  |
1 | let {}! = {};
  |     ^^

